[package]
name = "mazu-pybindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mazu"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
mazu = { git = "https://github.com/combine-lab/mazu.git" }
kmers = {git = "https://github.com/thejasonfan/kmers.git", branch="main"  }
# pyo3 = { version = "0.19.2", features = ["extension-module"] }
bincode = ">=1.3.3"

